--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^2.0.0",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
+    "mongoose": "^8.12.1",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
