--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^2.0.0",
+    "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
