--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.12.1",
     "next": "15.2.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0"
